Add fetch for recipe list

--- a/client/styles.css
+++ b/client/styles.css
@@ -40,3 +40,7 @@
     font-family: 'Courier New', Courier, monospace;
 }
 
+.submitButton {
+    font-family: 'Courier New', Courier, monospace;
+}
+
