--- a/client/Containers/MainContainer/MainContainer.module.css
+++ b/client/Containers/MainContainer/MainContainer.module.css
@@ -2,34 +2,52 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  align-items: center;
 }
 
 .button {
-  background: var(--primary-green);
+  background: var(--gradient-color);
   box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
   backdrop-filter: blur( 4px );
   -webkit-backdrop-filter: blur( 4px );
   border-radius: 10px;
   border: 1px solid rgba( 255, 255, 255, 0.18 );
-  color: white;
-  padding: .5rem 1rem;
+  color: var(--white-color);
+  padding: .25rem .75rem;
+  margin: .25rem;
   font-size: 1rem;
+  font-weight: 200;
+  justify-content: end;
   text-decoration: none;
 }
 
+
 .button:hover{
-  background: var(--secondary-green);
-  transition: 100ms;
+  background: var(--gradienthover-color);
+  transition: 150ms;
+  cursor: pointer;
 }
 
-.button:visited {
-    text-decoration: none;
-    color: white;
+.loginButtons {
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin-top: 1rem;
+  margin-right: 1rem;
 }
 
 .buttonHolder{
   display: flex;
+  margin-bottom: 2rem;
 }
+
+.logo{
+  margin-top: 4.5rem;
+  margin-bottom: 3rem;
+  height: 20vh;
+}
+
+
 
 .errorContainer {
   display: flex;
